changement des noms de classes css en francais et finalisation du projet avant le passage au validateur W3C

--- a/src/index.html
+++ b/src/index.html
@@ -33,19 +33,19 @@
         </nav>
     </header>
     <main>
-        <div class="filter-banner">
+        <div class="banniere-filtre">
             <div class="trouver-emplacement">
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
-                <form name="recherche" action="get" class="form-search">
-                    <button type="button" class="search-position">
+                <form name="recherche" action="get" class="formulaire-recherche">
+                    <button type="button" class="rechercher-position">
                         <i class="fa-solid fa-location-dot"></i>
                     </button>
-                    <input type="text" class="search-field" value="Marseille, France" size="15">
-                    <button type="submit" class="search-submit">
+                    <input type="text" class="champ-recherche" value="Marseille, France" size="15">
+                    <button type="submit" class="soumettre-recherche">
                         Rechercher
                     </button>
-                    <button type="submit" class="button-search-mobile">
+                    <button type="submit" class="bouton-recherche-mobile">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                 </form>
@@ -53,21 +53,21 @@
             <div class="filtrer-emplacement">
                 <h3>Filtres</h3>
                 <div class="tout-les-filtres">
-                    <div class="filter-button">
+                    <div class="bouton-filtre">
                         <i class="fa-solid fa-money-bill-wave"></i>
-                        <div class="name-button">Économique</div>
+                        <div class="bouton-nom">Économique</div>
                     </div>
-                    <div class="filter-button">
+                    <div class="bouton-filtre">
                         <i class="fa-solid fa-child-reaching"></i>
-                        <div class="name-button">Familial</div>
+                        <div class="bouton-nom">Familial</div>
                     </div>
-                    <div class="filter-button">
+                    <div class="bouton-filtre">
                         <i class="fa-solid fa-heart"></i>
-                        <div class="name-button">Romantique</div>
+                        <div class="bouton-nom">Romantique</div>
                     </div>
-                    <div class="filter-button">
+                    <div class="bouton-filtre">
                         <i class="fa-solid fa-dog"></i>
-                        <div class="name-button">Animaux autorisés</div>
+                        <div class="bouton-nom">Animaux autorisés</div>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                     <article class="logement">
                         <div class="logement-photo">
                             <img src="/src/assets/images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                                alt="">
+                                alt="photo de l'auberge la cannebière">
                             <!--photo de l'hebergement-->
                         </div>
                         <div class="detail-hebergement-marseille">
@@ -113,7 +113,7 @@
                     <article class="logement">
                         <div class="logement-photo">
                             <img src="/src/assets/images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-                                alt="">
+                                alt="photo de l'hôtel du port">
                             <!--photo de l'hebergement-->
                         </div>
                         <div class="detail-hebergement-marseille">
@@ -138,7 +138,7 @@
                     <article class="logement">
                         <div class="logement-photo">
                             <img src="/src/assets/images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-                                alt="">
+                                alt="photo de l'hôtel les mouettes">
                             <!--photo de l'hebergement-->
                         </div>
                         <div class="detail-hebergement-marseille">
@@ -163,7 +163,7 @@
                     <article class="logement">
                         <div class="logement-photo">
                             <img src="/src/assets/images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                                alt="">
+                                alt="photo de l'hôtel de la mer">
                             <!--photo de l'hebergement-->
                         </div>
                         <div class="detail-hebergement-marseille">
@@ -188,7 +188,7 @@
                     <article class="logement">
                         <div class="logement-photo">
                             <img src="/src/assets/images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-                                alt="">
+                                alt="photo de l'auberge le panier">
                             <!--photo de l'hebergement-->
                         </div>
                         <div class="detail-hebergement-marseille">
@@ -213,7 +213,7 @@
                     <article class="logement">
                         <div class="logement-photo">
                             <img src="/src/assets/images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-                                alt="">
+                                alt="photo de l'hotel chez amina">
                             <!--photo de l'hebergement-->
                         </div>
                         <div class="detail-hebergement-marseille">
@@ -252,7 +252,7 @@
                     <article class="populaire">
                         <div class="logement-photo">
                             <img src="/src/assets/images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                                alt="">
+                                alt="photo de l'hôtel le soleil du matin">
                             <!--photo de l'hebergement-->
                         </div>
                         <div class="detail">
@@ -277,7 +277,7 @@
                     <article class="populaire">
                         <div class="logement-photo">
                             <img src="/src/assets/images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg"
-                                alt="">
+                                alt="photo de au coeur de l'eau chambres d'hôtes">
                             <!--photo de l'hebergement-->
                         </div>
                         <div class="detail">
@@ -302,7 +302,7 @@
                     <article class="populaire">
                         <div class="logement-photo">
                             <img src="/src/assets/images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                                alt="">
+                                alt="photo de l'hôtel tout bleu et blanc">
                             <!--photo de l'hebergement-->
                         </div>
                         <div class="detail">
@@ -333,47 +333,47 @@
             </div>
             <div class="activites">
                 <div class="activites-xl">
-                    <article class="card-xl">
+                    <article class="carte-xl">
                         <img src="/src/assets/images/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-                            alt="">
-                        <div class="name-card-xl">
+                            alt="photo paysage vieux port">
+                        <div class="nom-carte-xl">
                             <h3>Vieux Port</h3>
                         </div>
                     </article>
                 </div>
                 <div class="activites-l-s">
-                    <article class="card-l">
-                        <img src="/src/assets/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
-                        <div class="name-card-l">
+                    <article class="carte-l">
+                        <img src="/src/assets/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo paysage fort de pomègues">
+                        <div class="nom-carte-l">
                             <h3>Fort de Pomègues</h3>
                         </div>
                     </article>
-                    <article class="card-s">
-                        <img src="/src/assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
-                        <div class="name-card-s">
+                    <article class="carte-s">
+                        <img src="/src/assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo paysage île du frioul">
+                        <div class="nom-carte-s">
                             <h3>Îles du Frioul</h3>
                         </div>
                     </article>
                 </div>
                 <div class="activites-xl">
-                    <article class="card-xl">
+                    <article class="carte-xl">
                         <img src="/src/assets/images/activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-                            alt="">
-                        <div class="name-card-xl">
+                            alt="photo paysage parc national des calanques">
+                        <div class="nom-carte-xl">
                             <h3>Parc National des Calanques</h3>
                         </div>
                     </article>
                 </div>
                 <div class="activites-m-m">
-                    <article class="card-m">
-                        <img src="/src/assets/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
-                        <div class="name-card-m">
+                    <article class="carte-m">
+                        <img src="/src/assets/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo paysage de notre dame de la garde">
+                        <div class="nom-carte-m">
                             <h3>Notre-Dame-de-la-Garde</h3>
                         </div>
                     </article>
-                    <article class="card-m">
-                        <img src="/src/assets/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
-                        <div class="name-card-m">
+                    <article class="carte-m">
+                        <img src="/src/assets/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo paysage du parc longchamp">
+                        <div class="nom-carte-m">
                             <h3>Parc Longchamp</h3>
                         </div>
                     </article>
