--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booki - Réserver votre logement</title>
-    <link rel="stylesheet" href="/src/css/reset.css">
-    <link rel="stylesheet" href="/src/css/styles.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,14 +21,14 @@
     <header>
         <div id="logo">
             <!-- logo booki-->
-            <img src="/src/assets/images/logo/Booki.png" alt="logo" class="logo-header">
+            <img src="/assets/images/logo/Booki.png" alt="logo" class="logo-header">
         </div>
         <nav class="menu">
             <div class="nav-hebergements">
-                <a href="#Hébergements">Hébergements</a>
+                <a href="#hebergement">Hébergements</a>
             </div>
             <div class="nav-activites">
-                <a href="#Activités">Activités</a>
+                <a href="#activités">Activités</a>
             </div>
         </nav>
     </header>
@@ -42,7 +42,7 @@
                         <i class="fa-solid fa-location-dot"></i>
                     </button>
                     <input type="text" class="champ-recherche" value="Marseille, France" size="15">
-                    <button type="submit" class="soumettre-recherche">
+                    <button type="submit" class="soumettre-recherche" disabled>
                         Rechercher
                     </button>
                     <button type="submit" class="bouton-recherche-mobile">
@@ -76,7 +76,7 @@
             <i class="fas fa-info"></i>
             <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
-        <section class="hebergement">
+        <section class="hebergement" id="hebergement">
             <div class="container">
                 <div class="hebergement-marseille-titre">
                     <h2>Hébergement à Marseille</h2>
@@ -85,9 +85,9 @@
                     <div class="titre-marseille-mobile">
                         <h2>Hébergement à Marseille</h2>
                     </div>
-                    <article class="logement">
+                    <a class="logement" href="#">
                         <div class="logement-photo">
-                            <img src="/src/assets/images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                            <img src="/assets/images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                                 alt="photo de l'auberge la cannebière">
                             <!--photo de l'hebergement-->
                         </div>
@@ -109,10 +109,10 @@
                                 <!--avis du logement-->
                             </div>
                         </div>
-                    </article>
-                    <article class="logement">
+                    </a>
+                    <a class="logement" href="#">
                         <div class="logement-photo">
-                            <img src="/src/assets/images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                            <img src="/assets/images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                                 alt="photo de l'hôtel du port">
                             <!--photo de l'hebergement-->
                         </div>
@@ -134,10 +134,10 @@
                                 <!--avis du logement-->
                             </div>
                         </div>
-                    </article>
-                    <article class="logement">
+                    </a>
+                    <a class="logement" href="#">
                         <div class="logement-photo">
-                            <img src="/src/assets/images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                            <img src="/assets/images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                                 alt="photo de l'hôtel les mouettes">
                             <!--photo de l'hebergement-->
                         </div>
@@ -159,10 +159,10 @@
                                 <!--avis du logement-->
                             </div>
                         </div>
-                    </article>
-                    <article class="logement">
+                    </a>
+                    <a class="logement" href="#">
                         <div class="logement-photo">
-                            <img src="/src/assets/images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                            <img src="/assets/images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                                 alt="photo de l'hôtel de la mer">
                             <!--photo de l'hebergement-->
                         </div>
@@ -184,10 +184,10 @@
                                 <!--avis du logement-->
                             </div>
                         </div>
-                    </article>
-                    <article class="logement">
+                    </a>
+                    <a class="logement" href="#">
                         <div class="logement-photo">
-                            <img src="/src/assets/images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                            <img src="/assets/images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                                 alt="photo de l'auberge le panier">
                             <!--photo de l'hebergement-->
                         </div>
@@ -209,10 +209,10 @@
                                 <!--avis du logement-->
                             </div>
                         </div>
-                    </article>
-                    <article class="logement">
+                    </a>
+                    <a class="logement" href="#">
                         <div class="logement-photo">
-                            <img src="/src/assets/images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                            <img src="/assets/images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                                 alt="photo de l'hotel chez amina">
                             <!--photo de l'hebergement-->
                         </div>
@@ -234,7 +234,7 @@
                                 <!--avis du logement-->
                             </div>
                         </div>
-                    </article>
+                    </a>
                     <div class="afficher-plus-mobile">
                         <a href="#">Afficher plus</a>
                     </div>
@@ -249,9 +249,9 @@
                     <i class="fas fa-chart-line"></i>
                 </div>
                 <div class="logement-populaire">
-                    <article class="populaire">
+                    <a class="populaire" href="#">
                         <div class="logement-photo">
-                            <img src="/src/assets/images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                            <img src="/assets/images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                                 alt="photo de l'hôtel le soleil du matin">
                             <!--photo de l'hebergement-->
                         </div>
@@ -273,10 +273,10 @@
                                 <!--avis du logement-->
                             </div>
                         </div>
-                    </article>
-                    <article class="populaire">
+                    </a>
+                    <a class="populaire" href="#">
                         <div class="logement-photo">
-                            <img src="/src/assets/images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                            <img src="/assets/images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg"
                                 alt="photo de au coeur de l'eau chambres d'hôtes">
                             <!--photo de l'hebergement-->
                         </div>
@@ -298,10 +298,10 @@
                                 <!--avis du logement-->
                             </div>
                         </div>
-                    </article>
-                    <article class="populaire">
+                    </a>
+                    <a class="populaire" href="#">
                         <div class="logement-photo">
-                            <img src="/src/assets/images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                            <img src="/assets/images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                                 alt="photo de l'hôtel tout bleu et blanc">
                             <!--photo de l'hebergement-->
                         </div>
@@ -323,59 +323,75 @@
                                 <!--avis du logement-->
                             </div>
                         </div>
-                    </article>
+                    </a>
                 </div>
             </div>
         </section>
         <section class="marseille-activites">
             <div class="titre-activite">
-                <h2>Activités à Marseille</h2>
+                <h2 id="activités">Activités à Marseille</h2>
             </div>
             <div class="activites">
                 <div class="activites-xl">
                     <article class="carte-xl">
-                        <img src="/src/assets/images/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                        <a href="#">
+                        <img src="/assets/images/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                             alt="photo paysage vieux port">
                         <div class="nom-carte-xl">
                             <h3>Vieux Port</h3>
                         </div>
+                    </a>
                     </article>
                 </div>
                 <div class="activites-l-s">
                     <article class="carte-l">
-                        <img src="/src/assets/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo paysage fort de pomègues">
+                        <a href="#">
+                        <img src="/assets/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                            alt="photo paysage fort de pomègues">
                         <div class="nom-carte-l">
                             <h3>Fort de Pomègues</h3>
                         </div>
+                    </a>
                     </article>
                     <article class="carte-s">
-                        <img src="/src/assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo paysage île du frioul">
+                        <a href="#">
+                        <img src="/assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                            alt="photo paysage île du frioul">
                         <div class="nom-carte-s">
                             <h3>Îles du Frioul</h3>
                         </div>
+                    </a>
                     </article>
                 </div>
                 <div class="activites-xl">
                     <article class="carte-xl">
-                        <img src="/src/assets/images/activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                        <a href="#">
+                        <img src="/assets/images/activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                             alt="photo paysage parc national des calanques">
                         <div class="nom-carte-xl">
                             <h3>Parc National des Calanques</h3>
                         </div>
+                    </a>
                     </article>
                 </div>
                 <div class="activites-m-m">
                     <article class="carte-m">
-                        <img src="/src/assets/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo paysage de notre dame de la garde">
+                        <a href="#">
+                        <img src="/assets/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                            alt="photo paysage de notre dame de la garde">
                         <div class="nom-carte-m">
                             <h3>Notre-Dame-de-la-Garde</h3>
                         </div>
+                    </a>
                     </article>
                     <article class="carte-m">
-                        <img src="/src/assets/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo paysage du parc longchamp">
-                        <div class="nom-carte-m">
-                            <h3>Parc Longchamp</h3>
-                        </div>
+                        <a href="#">
+                            <img src="/assets/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                                alt="photo paysage du parc longchamp">
+                            <div class="nom-carte-m">
+                                <h3>Parc Longchamp</h3>
+                            </div>
+                        </a>
                     </article>
                 </div>
             </div>
